--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <footer>
+        <button>Call</button>
+        <button>Call</button>
+        <button>Call</button>
+        <button>Call</button>
+    </footer>
 </body>
 </html>
