--- a/index.html
+++ b/index.html
@@ -6,16 +6,22 @@
     <title>Document</title>
 </head>
 <body>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ea reiciendis dolorem tempore accusamus ad atque repudiandae. Error, maiores optio veritatis quibusdam, distinctio voluptatum mollitia harum, officia velit ab debitis!</p>
     <nav>
         <a href="#">Home</a>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ea reiciendis dolorem tempore accusamus ad atque repudiandae. Error, maiores optio veritatis quibusdam, distinctio voluptatum mollitia harum, officia velit ab debitis!</p>
         <a href="#">Home</a>
         <a href="#">Home</a>
     </nav>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ea reiciendis dolorem tempore accusamus ad atque repudiandae. Error, maiores optio veritatis quibusdam, distinctio voluptatum mollitia harum, officia velit ab debitis!</p>
     <footer>
         <button>Call</button>
-        <button>Call</button>
+        <button>Call
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ea reiciendis dolorem tempore accusamus ad atque repudiandae. Error, maiores optio veritatis quibusdam, distinctio voluptatum mollitia harum, officia velit ab debitis!</p>
+        </button>
         <button>Call</button>
         <button>Call</button>
     </footer>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dicta ea reiciendis dolorem tempore accusamus ad atque repudiandae. Error, maiores optio veritatis quibusdam, distinctio voluptatum mollitia harum, officia velit ab debitis!</p>
 </body>
 </html>
